refactoring and add a new aauthentication endpoint with JWT
