# swagger/spring-server/src/main/java/ch/heigvd/authentication/entities/UserEntity.java
@@ -5,6 +5,7 @@ import lombok.Setter;
 
 import javax.persistence.*;
 import java.io.Serializable;
+import org.mindrot.jbcrypt.BCrypt;
 
 @Getter
 @Setter
@@ -33,4 +34,25 @@ public class UserEntity implements Serializable {
 
     @Column(name = "password")
     private String password;
+
+    @Column(name = "isAdmin")
+    private Boolean isAdmin;
+
+    @Column(name = "isLocked")
+    private Boolean isLocked;
+
+    /**
+     * Store the encoded new user
+     * password in order not to hard code it
+     * in db. Used when creating or updating users
+     * @param password password to encode
+     */
+    public void encodePassword(String password) {
+
+        if (!password.isEmpty() || password != null) {
+
+            // automatically generate salt
+            this.password = BCrypt.hashpw(password, BCrypt.gensalt());
+        }
+    }
 }
